# project11a-ai-sense

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ai-ecosystem.yml
docs/: openapi.json
src/: main.cpp  main.py
storage/: nexus.onnx  nexus.onnx.data  tokenizer.model
